error/20200003/25_error.txt
/home/codejune/ssu_2020/STD_DIR/20200003/25.c: In function ‘main’:
/home/codejune/ssu_2020/STD_DIR/20200003/25.c:38:1: error: expected ‘;’ before ‘}’ token
 }
 ^
/home/codejune/ssu_2020/STD_DIR/20200003/25.c:38:1: error: expected declaration or statement at end of input
